--- a/symfony/.env
+++ b/symfony/.env
@@ -18,7 +18,7 @@
 APP_ENV=dev
 APP_SECRET=1286051eef7a055dfe696da0d6d08344
 
-DATABASE_URL="mysql://root:gnTsdl!32s127.0.0.1:3306/course?serverVersion=8.0.36&charset=utf8mb4"
+DATABASE_URL="mysql://root:gnTsdl!32s@mysql/course?serverVersion=8.0.36&charset=utf8mb4"
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -28,7 +28,7 @@ DATABASE_URL="mysql://root:gnTsdl!32s127.0.0.1:3306/course?serverVersion=8.0.36&
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+#DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
