--- a/symfony/Dockerfile
+++ b/symfony/Dockerfile
@@ -13,7 +13,13 @@ RUN apt-get install -y \
     libxml2-dev \
     zip \
     unzip \
-    && docker-php-ext-install pdo_mysql
+    && docker-php-ext-install pdo_mysql \
+    && pecl install xdebug \
+    && docker-php-ext-enable xdebug
+
+RUN mkdir -p docker/php/conf.d \
+    touch docker/php/conf.d/xdebug.ini \
+    touch docker/php/conf.d/error_reporting.ini
 
 RUN curl -sSLo composer-setup.php https://getcomposer.org/installer && \
     php composer-setup.php --install-dir=/usr/local/bin --filename=composer && \
