--- a/docker/xdebug/xdebug.ini
+++ b/docker/xdebug/xdebug.ini
@@ -1,16 +1,8 @@
-zend_extension=xdebug
+zend_extension=xdebug.so
 
-xdebug.mode = debug
-xdebug.start_with_request = yes
-xdebug.client_port = 9003
-xdebug.client_host = 192.168.0.100
-xdebug.idekey = docker
-#xdebug.show_error_trace = 1
+xdebug.mode=debug
+xdebug.start_with_request=yes
+xdebug.client_port=9003
+xdebug.client_host=192.168.0.100
+xdebug.idekey=docker
 xdebug.log_level=7
-
-#zend_extension=xdebug
-
-#[xdebug]
-#xdebug.mode=develop,debug
-#xdebug.client_host=host.docker.internal
-#xdebug.start_with_request=yes
