--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,6 +15,8 @@ http{
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
         }
     }
 
@@ -24,17 +26,22 @@ http{
         server_name api.*;
 
         root /app/public;
+        
+        #add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
 
         include /etc/nginx/mime.types;
 
         location / {
             # try to serve file directly, fallback to index.php
             try_files $uri /index.php$is_args$args;
+
         }
 
         location ~ ^/index\.php(/|$) {
             fastcgi_pass symfony:9000;
             fastcgi_split_path_info ^(.+\.php)(/.*)$;
+            fastcgi_pass_request_body on;
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param DOCUMENT_ROOT $document_root;
