--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,6 +31,8 @@ http{
 
         include /etc/nginx/mime.types;
 
+        add_header Access-Control-Allow-Credentials true;
+
         location / {
             # try to serve file directly, fallback to index.php
             try_files $uri /index.php$is_args$args;
