--- a/symfony/config/packages/security.yaml
+++ b/symfony/config/packages/security.yaml
@@ -23,8 +23,13 @@ security:
         api:
             pattern: ^/api
             stateless: true
+            entry_point: jwt
             jwt: ~
             provider: app_user_provider
+            refresh_jwt:
+                check_path: api_refresh_token
+            logout:
+                path: api_token_invalidate
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
