refresh token update

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
     container_name: course-frontend
     restart: always
     environment:
-      - PUBLIC_API_ORIGIN=api.localhost:8888
+      - PUBLIC_API_ORIGIN=localhost:8888
       - PUBLIC_API_PROTOCOL=http://
     volumes:
       - /app/node_modules
