--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,36 +10,24 @@ http{
 
         root /app;
         
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
+        location /api {
+            root /app/public;
+            # try to serve file directly, fallback to index.php
+            try_files $uri /index.php$is_args$args;
+        }
 
         location / {
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
             proxy_pass http://frontend:3000;
         }
 
-    }
-
-
-    server {
-        listen 80;
-        server_name api.*;
-
-        root /app/public;
-
-        include /etc/nginx/mime.types;
-
-        add_header Access-Control-Allow-Credentials true;
-
-        location / {
-            # try to serve file directly, fallback to index.php
-            try_files $uri /index.php$is_args$args;
-
-        }
 
         location ~ ^/index\.php(/|$) {
+            root /app/public;
             fastcgi_pass symfony:9000;
             fastcgi_split_path_info ^(.+\.php)(/.*)$;
             fastcgi_pass_request_body on;
