--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,5 +18,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@bytescale/sdk": "^3.39.0"
+	}
 }
