create collection end created

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,10 +7,23 @@ http{
     server{
         listen 80;
         server_name 127.0.0.1;
+        include mime.types;
 
         root /app;
+
+
+        location /bundles{
+            root /app/public;
+            try_files $uri /index.php$is_args$args;
+        }
         
         location /api {
+            root /app/public;
+            # try to serve file directly, fallback to index.php
+            try_files $uri /index.php$is_args$args;
+        }
+
+        location ~ ^/_(wdt)|(profiler) {
             root /app/public;
             # try to serve file directly, fallback to index.php
             try_files $uri /index.php$is_args$args;
