--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,9 @@ http{
         server_name 127.0.0.1;
         include mime.types;
 
+        fastcgi_read_timeout 1d;
+        proxy_read_timeout 1d;
+
         root /app;
 
 
