--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -9,8 +9,8 @@ http{
         server_name 45.87.219.64;
         include mime.types;
 
-        fastcgi_read_timeout 1d;
-        proxy_read_timeout 1d;
+        fastcgi_read_timeout 3600;
+        proxy_read_timeout 3600;
 
         root /app;
 
