--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -19,7 +19,7 @@ COPY --from=builder /staging/package.json /staging/pnpm-lock.yaml  /app/
 COPY --from=builder /staging/node_modules /app/node_modules
 COPY --from=builder /staging/build /app/build   
 
-ENV ORIGIN=http://45.87.219.64:8080/
+ENV ORIGIN=http://45.87.219.64:8080
 
 
 EXPOSE 3000
